--- a/frontend/src/pages/LoginSignup/LoginPage.css
+++ b/frontend/src/pages/LoginSignup/LoginPage.css
@@ -17,6 +17,21 @@
     width: 100%;
     margin-top: 30px;
 }
+.naveen{
+    display: flex;
+    flex-direction: row;
+}
+.naveen .btnx{
+    height:40px;
+    width:50%;
+}
+.naveen .btny{
+    height:40px;
+    width:50%;
+}
+.btn3{
+    height:40px;
+}
 
 .text{
     color: #3c009d;
